assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Archivo+Narrow|Bungee+Inline');


body {
    overflow-x: hidden;
}

body p {
    letter-spacing: 2px;
    font-family: 'Bungee+Inline', sans-serif;
    font-weight: 600;
    font-size: 15px;
}

.bio-bg-color p {
    margin-left: 20px;
    margin-right: 20px;
    margin-top: 15px;
    margin-bottom: 20px;
    padding-bottom: 30px;
}

/*--------------navigation-bar------------------------*/

.btn-default {
    color: #333;
    background-color: #0a0a0a;
    border-color: #ffaa6a;
}

.navbar-toggle .icon-bar {
    display: block;
    width: 22px;
    height: 2px;
    border-radius: 1px;
    background-color: #fb9600;
}

.navbar-toggle {
    position: relative;
    float: right;
    padding: 9px 10px;
    margin-top: 8px;
    margin-right: 15px;
    margin-bottom: 8px;
    border: 1px solid #ff9b00;
    background-image: none;
    /* border: 1px solid transparent; */
    border-radius: 4px;
}

.nav-justified>li>a {
    margin-bottom: 5px;
    text-align: center;
    letter-spacing: 5px;
    padding-right: 0px;
    padding-left: 0px;
}

.dropdown-content a:hover {
    background-color: white;
}

#intro {
    padding-top: 30px;
}

/*--------------navigation-bar-end------------------------*/

/*--------------Headings----------------------------------*/

h1,
h2,
h3,
h4 {
    color: #ff9800;
    font-weight: 900;
}



.video-header h2 {
    text-align: center;
    font-size: 50px;

}

.sub-header {
    color: #f5efd5;
    text-align: center;
    padding-bottom: 15px;
    font-size: 100px;


}

.video-player-heading h2 {
    text-align: center;
    font-size: 45px;
    color: aliceblue;
    margin-top: 30px;
    margin-bottom: 40px;
}

.opacity-header {
    opacity: 0.1;
}

.container-header h1 {
    text-align: center;
}



.gallery-heading h2 {
    font-family: 'Archivo+Narrow', sans-serif;

    text-align: center;
    letter-spacing: 5px;
    padding-bottom: 20px;
    font-size: -webkit-xxx-large;
    margin-top: 50px;
    margin-bottom: 30px;
}

.the-band-heading h2 {

    text-align: center;
    letter-spacing: 5px;
    padding-bottom: 20px;
    font-size: -webkit-xxx-large;
    padding-top: 30px;
}

.container-bio h3 {
    text-align: center;
}




.hire-us-header h2 {

    text-align: center;
    font-size: 54px;
    letter-spacing: 5px;
    padding-top: 30px;
    padding-bottom: 30px;
}

.audio-video-heading h2 {
    text-align: center;
    font-size: 45px;
    padding-top: 16px;
    padding-bottom: 35px;

}

.song-headers h3 {
    text-align: center;

    margin-bottom: 25px;
}



/*------------------------------------------------------header-------------------------------*/

a {
    color: #ff9b00;
    text-decoration: none;
}

.logo {
    font-family: 'Archivo+Narrow', sans-serif;
}

.logo,
h1 {
    font-size: 45px;

    color: #ff9800;
    padding-top: 30px;
    padding-bottom: 10px;
    letter-spacing: 10px;
    text-align: center;
}


.intro p {
    color: white;
    padding-left: 15px;
    padding-right: 15px;
    text-align: center;
    font-family: 'Bungee+Inline', sans-serif;
    padding-bottom: 15px;

}

/*-------------------------------------------------------------------------------------------gallery-------------*/

/*---------------https://www.youtube.com/watch?v=C1B1Fx3XKOg&t=92s-------------*/

.image-gallery-images-lower {
    margin-left: 15px;
    margin-right: 11px;
}

.thumbnail {
    display: block;
    padding: 4px;
    margin-bottom: 20px;
    line-height: 1.42857143;
    background-color: transparent;
    border: 1px solid transparent;
    border-radius: 4px;
    -webkit-transition: border .2s ease-in-out;
    -o-transition: border .2s ease-in-out;
    transition: border .2s ease-in-out;
    
}

.image-thumbnail {
    text-align: center;
}


.thumbnail img {
    width: 300px;
    height: 300px;
    filter: grayscale(100%);
    transition: transform 2s;
}

.thumbnail img:hover {
    filter: grayscale(0);

    border-color: #f07f03;
}

.img-thumbnail {
    display: inline-block;
    max-width: 100%;
    height: auto;
    padding: 4px;
    line-height: 1.42857143;
    background-color: transparent;
    border: 5px solid #797575;
    border-radius: 4px;
    -webkit-transition: all .2s ease-in-out;
    -o-transition: all .2s ease-in-out;
    transition: all .2s ease-in-out;
}






/*----------------------------------------------bio----------------------------*/

.img-circle {
    border-radius: 50%;
    margin-left: auto;
    margin-right: auto;
    padding-bottom: 20px;
    width: 300px;
}

.container-bio img-thumbnail {
    max-width: 260px margin-left:10px;
    margin-right: 10px;
}



.bio-text-dj {}

.bio-text-pt {}

.bio-text-md {}

.bio-text-mn {
    margin-bottom: 20px;
}


.bio-text p {}


/*----------------------bg-colors/images------------------*/

.bio-bg-color {
    background-color: #d980005e;
}

.gallery-bg-color {
    background: url(../images/matt-jones-94160-unsplash.jpg) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    z-index: 1000;
    padding-bottom: 30px;


}

.audio-bg-color {
    background-color: #c34823;
}

.hire-us-bg-color {
    background: url(../images/aaron-paul-213841-unsplash.jpg) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    z-index: 1000;
    width: 100vw;

}

.header-bg-color {
    background: url(../images/monkees-large.jpg) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    z-index: 1000;
    width: 100vw;
    min-height: 100vh;

}

/*---------------------------------------------audio----------------------------*/

.audio-player {
    padding-bottom: 20px;
    text-align: center;

}

.song-paragraph p {
    letter-spacing: 2px;
    color: aliceblue;
    margin-bottom: 25px;
    margin-top: 25px;
    margin-right: 15px;
    margin-left: 15px;
}



/*----------------------------------------------video---------------------------*/

.video-player {
    text-align: center;
}

.video-paragraph p {
    font-family: 'Bungee+Inline', sans-serif;

    padding-top: 25px;
    padding-bottom: 25px;
    color: aliceblue;
    margin-right: 15px;
    margin-left: 15px;
    margin-bottom: 30px;
}

video {
    width: 60% !important;
    height: auto !important;
}


/*----------------hire us--------------------------------------------------------*/

.hire-us-paragraph p {
    margin: 0 0 10px;
    color: aliceblue;
    letter-spacing: 2px;
    font-weight: 600;
    padding-bottom: 20px;
    padding-top: 15px;
    padding-right: 20px;
    padding-left: 20px;
}



.form-attributes {
    padding-left: 20px;
    padding-right: 20px;
    padding-top: 40px;
    padding-bottom: 40px;
}

/*--------------------------------------------------------------------*/

.form-group {
    margin-bottom: 15px;
    text-align: center;
}

.btn-primary {
    color: #fff;
    background-color: #ff9800;
    border-color: #ff9800;
}


/*----------------------------------------footer-----------------------*/

.footer-bg-color {
    background-color: black;
    height: 100%;
}

.list-inline {
    padding-left: 0;
    margin-left: -5px;
    list-style: none;
    text-align: center;
}

.list-inline>li {
    display: inline-block;
    padding-right: 35px;
    padding-left: 35px;
    height: 20px;
}

.fa {
    display: inline-block;
    font: normal normal normal 14px/1 FontAwesome;
    font-size: inherit;
    text-rendering: auto;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    font-size: 25px;
}

@media(min-width:400px) {
    .intro p {
        font-size: 20px;
        padding-top: 45px;
    }
}

@media(min-width:713px) {

    .image-gallery-images-lower {
        margin-left: 0px;
        margin-right: 0px;
    }


    .logo,
    h1 {
        margin-top: 50px;
        font-size: 90px;

    }
    .sub-header {
        padding-top: 15px;
        margin-bottom: 15px;
    }
    .sub-header h2 {
        font-size: 40px;
    }
    .form-attributes {
        padding-bottom: 70px;
    }
    .intro p {
        margin-left: 30px;
        margin-right: 30px;
        font-size: 20px;
        margin-bottom: 100px;
    }
}

@media(min-width:992px) {}

@media(min-width:1200px) {}

